@@ -163,7 +163,45 @@
          </item>
         </widget>
        </item>
-       <item row="4" column="0" colspan="3">
+       <item row="4" column="0">
+        <widget class="QLabel" name="RandomizePercentTextLabel">
+         <property name="text">
+          <string>&amp;Randomize factor:</string>
+         </property>
+         <property name="buddy">
+          <cstring>RandomizePercentSpinBox</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QDoubleSpinBox" name="RandomizePercentSpinBox">
+         <property name="toolTip">
+          <string>Randomizer deviation from current value</string>
+         </property>
+         <property name="suffix" >
+          <string> %</string>
+         </property>
+         <property name="accelerated">
+          <bool>true</bool>
+         </property>
+         <property name="decimals">
+          <number>1</number>
+         </property>
+         <property name="minimum">
+          <double>0.1</double>
+         </property>
+         <property name="maximum">
+          <double>100.0</double>
+         </property>
+         <property name="singleStep">
+          <double>0.1</double>
+         </property>
+         <property name="value">
+          <double>20.0</double>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0" colspan="3">
         <spacer>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
