@@ -1,7 +1,7 @@
 // padthv1widget_sample.h
 //
 /****************************************************************************
-   Copyright (C) 2012-2018, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2019, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -69,6 +69,9 @@ protected slots:
 	void resetSquareEven();
 
 	void resetSinc();
+
+	// Randomize all current partials.
+	void randomize();
 
 protected:
 
